project_3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-3
  labels:
    name: project-3
    environment: demo
