project_3/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: project-3
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
    tier: backend
  ports:
  - port: 5678
    targetPort: 5678
    protocol: TCP
    name: http
