project_3/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: project-3
  labels:
    app: database
spec:
  type: ClusterIP
  selector:
    app: database
    tier: database
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
