project_3/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project-3
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
