project_3/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: project-3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
